# bedrockAgentCore-Workloads

./: .$architecture.drawio.bkp  .gitignore  ReadME.md  main.py  pyproject.toml  test_app.py  test_logs.json
benchmark/: .gitignore  README.md  _runner_all.sh  aggregate_logs.py  arxiv_workloads.py  config.env  logger.py  runner.py  verify_flags.py
benchmark-distributed/: .gitignore  aggregate_logs.py  arxiv_workloads.py  config.env  log_workloads.py  runner.py  verify_logs.py
benchmark-distributed/plotter/: infra_plotter.py  latency_plotter.py  tokens_plotter.py
benchmark/plotter/: generate_plots.py  infra_plotter.py  latency_plotter.py  tokens_plotter.py
benchmark/plotter/_archive/: latency_plotter.py  tokens_plotter.py
common/: pyproject.toml
common/src/common/: logging_callback.py  mcp_client.py  (+1 more)
custom_mcp/: pyproject.toml
custom_mcp/src/custom_mcp/: __init__.py  mcp_lambda_connection_guide.md
workflows/plan_act_evaluate_mcp_monolith/: Dockerfile  app.py  deploy.py  help.txt  invoke.py  prompts.py  requirements.txt  test_cb.py  test_run.py
workflows/plan_act_evaluate_mcp_multi_agent/: Dockerfile  app.py  deploy.py  report.json  test_run.py
workflows/react_agent_mcp/: invoke.py  requirements.txt
workflows/react_distributed/: README.md  test_memory_checkpointer.py
workflows/react_monolith/: Dockerfile  README.md  app.py  app_new.py  deploy.sh  prompts.py  requirements.txt  test_metrics.json  testing_memory.py
workflows/simple_agent/: Dockerfile  ImplementationLog.md  app.py  check_status.py  deploy_simple.py  invoke_simple.py  requirements.txt
(+24 files in other folders)
