[project]
name = "bedrockac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Haseeb", email = "haseebbdll2@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=1.3.1",
    "bedrock-agentcore-starter-toolkit>=0.3.0",
    "boto3>=1.42.54",
    "common",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "python-dotenv>=1.2.1",
    "traceloop-sdk>=0.52.5",
]

[tool.uv.workspace]
members = [
    "common",
]

[tool.uv.sources]
common = { workspace = true, editable = true }
